Harden release gates and align Windows installer (#113)
Security, CI, PostgreSQL/Testcontainers and Windows installer hardening after the full MINOS audit. Aligns the Windows deployment wizard with qualified NEXUS patterns and adds exact-head end-to-end release validation.